# obs-studio

./: .gitmodules  README.rst  azure-pipelines.yml
.github/workflows/: main.yml
CI/: before-deploy-osx.sh  before-script-osx.sh  install-dependencies-osx.sh  install-qt-win.cmd  install-script-win.cmd
CI/install/osx/: packageApp.sh
UI/: CMakeLists.txt  api-interface.cpp  auth-base.cpp  auth-base.hpp  auth-mixer.cpp  auth-mixer.hpp  auth-oauth.cpp  auth-oauth.hpp  auth-restream.cpp  auth-restream.hpp  auth-twitch.cpp  auth-twitch.hpp  keyed-list-widget.cpp  keyed-list-widget.hpp  obs-app.cpp  obs-proxy-style.cpp  obs-proxy-style.hpp  platform-osx.mm  properties-view.cpp  properties-view.hpp  saved-services-list.cpp  saved-services-list.hpp  service-settings.cpp  service-settings.hpp  settings-list-container.cpp  settings-list-container.hpp  source-tree.cpp  ui-validation.cpp  window-basic-auto-config-test.cpp  window-basic-auto-config.cpp  window-basic-auto-config.hpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main-profiles.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-status-bar.cpp  (+1 more)
UI/data/locale/: en-US.ini
UI/data/themes/: Acri.qss  Dark.qss  Default.qss  Rachni.qss
UI/forms/: AutoConfigStreamPage.ui  AutoConfigTestPage.ui  OBSBasicSettings.ui  OBSNewStreamServiceDialog.ui  obs.qrc
UI/frontend-plugins/: CMakeLists.txt
UI/frontend-plugins/aja-output-ui/: CMakeLists.txt  aja-ui-main.cpp
UI/frontend-plugins/decklink-captions/: CMakeLists.txt  DecklinkCaptionsUI.cpp  DecklinkCaptionsUI.h  decklink-captions.cpp  decklink-captions.h
UI/obs-frontend-api/: obs-frontend-api.cpp  obs-frontend-api.h  obs-frontend-internal.hpp
docs/sphinx/: reference-properties.rst
libobs/: CMakeLists.txt  obs-cocoa.c  obs-display.c  obs-internal.h  obs-module.h  obs-nix.c  obs-output.c  obs-properties.h  obs-service.c  obs-source.c  obs-source.h  obs-video.c  obs.h
libobs-opengl/: gl-shader.c
libobs/graphics/: effect-parser.c
libobs/util/: bitstream.c  bitstream.h
plugins/: CMakeLists.txt
plugins/aja/: main.cpp
plugins/decklink/: OBSVideoFrame.cpp  OBSVideoFrame.h  decklink-device-instance.cpp  decklink-device-instance.hpp  decklink-output.cpp  decklink-source.cpp
plugins/decklink/mac/: CMakeLists.txt
plugins/decklink/win/: CMakeLists.txt  platform.cpp
plugins/mac-au/: CMakeLists.txt  mac-au.m  plugin-main.c  util.h
plugins/mac-au/cmake/macos/: Info.plist.in
plugins/obs-ffmpeg/: obs-ffmpeg-mux.c  obs-ffmpeg.c
plugins/obs-filters/: luma-key-filter.c
plugins/obs-filters/data/: luma_key_filter.effect
plugins/obs-filters/data/locale/: en-US.ini
plugins/obs-outputs/: obs-outputs.c  rtmp-stream.c
plugins/obs-qsv11/: QSV_Encoder.cpp  QSV_Encoder_Internal.cpp  obs-qsv11.c
plugins/obs-vst3/: CMakeLists.txt  VST3Filter.h  main.cpp
plugins/obs-vst3/data/locale/: en-US.ini
plugins/obs-webrtc/: CMakeLists.txt  webrtc-call.c  webrtc-call.h  webrtc-output.cpp  webrtc-output.h  webrtc-source.c  webrtc-stream.cpp  webrtc-stream.h  webrtc.c  webrtc.cpp  whip-service.c  whip.c  whip.h
plugins/obs-webrtc/webrtc/: bindings.h
plugins/obs-webrtc/webrtc/src/: call.rs
plugins/rtmp-services/: rtmp-common.c  rtmp-custom.c  rtmp-services-main.c
plugins/rtmp-services/data/: services.json
plugins/shadertoy/: CMakeLists.txt  shadertoy.cpp
plugins/shadertoy/data/: test.effect
plugins/shadertoy/data/locale/: en-US.ini
test/cmocka/: test_bitstream.c
